--- a/react-ts-app/src/Apps/DrumMachine/components/index.css
+++ b/react-ts-app/src/Apps/DrumMachine/components/index.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  background: #ddd;
+  background: #fafafd;
   bottom: 0; left: 0; right: 0; top: 0;
   font-family: sans-serif;
 }
@@ -12,11 +12,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: lightgrey;
+  background: white;
   max-width: 90%;
   max-height: 90%;
-  min-width: 400px;
+  min-width: 420px;
   min-height: 500px;
+  border: 1px solid grey;
+  border-radius: 24px;
+  padding: 10px;
 }
 
 
@@ -35,7 +38,7 @@
 }
 
 .DrumMachine > .pads {
-  padding: 12px;
+  padding: 20px;
   display: grid;
   grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
   grid-gap: 12px;
@@ -46,14 +49,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: lightgreen;
+  background: white;
+  border: solid 1px lightgrey;
   border-radius: 18px;
+
+}
+
+.drum-pad > h3 {
+  height: 10px;
+  font-size: 24px;
+  line-height: 41px;
+}
+.drum-pad > p {
+  margin-bottom: 18px;
 }
 
 .pad-pressed {
   position: relative;
   top: 2px;
-  background: pink;
+  background: #ffdddd;
 }
 
 .drum-pad:hover {
