--- a/react-ts-app/public/index.css
+++ b/react-ts-app/public/index.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vw;
+  padding: 0;
+  margin: 0;
+}
+
 html {
   --font-1: 'Roboto', sans-serif;
   --font-2: 'Open sans', sans-serif;
@@ -16,6 +22,11 @@ html {
   
   scroll-behavior: smooth;
   font-family: var(--font-1);
+}
+
+header.Home {
+  padding: 0;
+  margin: 0;
 }
 
 .flex-row {
@@ -95,76 +106,6 @@ h1 {
   width: 100%;
   box-shadow: 0 6px 5px 0px rgba(100,100,100,0.2);
 }
-
-#projects {
-  padding-top: 140px;
-  flex-wrap: wrap;
-  background: linear-gradient(-20deg, var(--color-4), var(--color-4-gradient));
-}
-
-#projects > h2 {
-  position: absolute;
-  align-self: flex-start;
-  margin-top: -70px;
-  font-family: var(--font-1);
-  color: var(--color-5);
-  font-size: 30px;
-}
-
-
-
-#contact {
-  flex-direction: column;
-  background: linear-gradient(-30deg, var(--color-2), var(--color-2-gradient));
-}
-
-#contact > h2 {
-  color: var(--color-1);
-  font-size: 36px;
-  margin-bottom: 40px; 
-}
-
-.contact-tile {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  padding: 15px 18px 15px 18px;
-  margin: 10px;
-  background: white;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px 0px rgba(100, 100, 100, 0.2);
-  max-height: 56px;
-  transition: 0.3s;
-  font-size: 20px;
-}
-.contact-tile:hover {
-  max-height: 100px;
-  box-shadow: 0 0 4px 0px rgba(250, 250, 250, 0.6);
-}
-
-.contact-tile > svg {
-  height: 22px;
-  margin-right: 8px; 
-}
-
-.contact-tile > div {
-  color: #222;
-  margin-top: 2px;
-}
-
-
-footer.Home {
-  background: #333; 
-  color: #bbb;
-  padding: 30px;
-  text-align: center;
-  position: relative;
-  line-height: 26px;
-}
-footer.Home > p > a {
-  color: white;
-}
-
 
 @media screen and (max-width: 550px) {
   #navbar {
