--- a/react-ts-app/src/Apps/Conways-broken/components/Unit/index.css
+++ b/react-ts-app/src/Apps/Conways-broken/components/Unit/index.css
@@ -13,6 +13,7 @@
 	position: absolute;
 	height: 7px;
 	width: 7px;
+	border: 5px solid lightgrey;
 } .CGL-unit:hover {
 	  cursor: pointer;
 		background: #2bffff;
@@ -41,5 +42,5 @@
 
 .CGL-dead {
 	background: #ddd;
-	border: 4px solid #f5f5f5;
+	border: 4px solid #e5e5e5;
 }
