--- a/react-ts-app/src/Apps/Pomodoro/components/Pomodoro.css
+++ b/react-ts-app/src/Apps/Pomodoro/components/Pomodoro.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 
 .Pomodoro > div > h1 {
@@ -33,7 +33,7 @@
   line-height: 88px;
   border-radius: 22px;
   margin: 28px;
-  padding: 5px;
+  padding: 5px 5px 80px 5px;
 }
 
 .Pomodoro > div > h2 {
