--- a/react-ts-app/src/Apps/RandomQuoteMachine/components/index.css
+++ b/react-ts-app/src/Apps/RandomQuoteMachine/components/index.css
@@ -35,7 +35,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #333;
+  color: #222;
   font-family: 'Pacifico', cursive;  
   text-align: center;
   display: flex;
@@ -67,6 +67,7 @@
   bottom: 0;
   font-family: sans-serif;
   font-size: 20px;
+  height: 50px;
   display: flex;
   width: 100vw;
   overflow: hidden;
@@ -77,7 +78,7 @@
   text-decoration: none;
   flex: 1 1;
   text-align: center;
-  height: 25px;
+  height: 50px;
   padding: 15px;
   display: flex;
   justify-content: center;
@@ -99,5 +100,6 @@
   .RQM-ShareButtons {
     border-radius: 12px;
     width: 500px;
+    bottom: 5px;
   }
 }
